add postman collection
